--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "element-ui": "^2.3.6",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
@@ -19,7 +22,10 @@
     "@vue/cli-service": "^4.2.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.1.0",
     "typescript": "~3.7.5",
+    "vue-cli-plugin-element-ui": "^1.1.4",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
