--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.3.6",
+    "face-api.js": "0.20.0",
     "vue": "^2.6.11",
+    "vue-property-decorator": "^8.4.0",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
@@ -24,7 +26,7 @@
     "stylus-loader": "^3.0.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.1.0",
-    "typescript": "~3.7.5",
+    "typescript": "^3.7.5",
     "vue-cli-plugin-element-ui": "^1.1.4",
     "vue-template-compiler": "^2.6.11"
   },
