--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "cube-ui": "^1.12.36",
+    "dayjs": "^1.8.20",
     "element-ui": "^2.3.6",
     "face-api.js": "0.20.0",
     "lodash": "^4.17.15",
