fix load camera

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-property-decorator": "^8.4.0",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2",
-    "vuex-pathify": "^1.4.1"
+    "vuex-pathify": "^1.4.1",
+    "webrtc-adapter": "^7.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
