--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VUE_APP_API_BASE=https://face.codeispoetry.tech/
+VUE_APP_API_BASE=https://face.codeispoetry.tech/api/
 VUE_APP_GRAPHQL_HTTP=https://face.codeispoetry.tech/graphql
 VUE_APP_STATIC_ROOT=https://face.codeispoetry.tech/static/
