--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.149",
     "amfe-flexible": "^2.2.1",
+    "apollo-link-error": "^1.1.12",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "cube-ui": "^1.12.36",
