--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "projectface",
-  "version": "0.1.0",
+  "name": "face-mobile",
+  "version": "0.9.0",
   "private": true,
   "scripts": {
     "build": "vue-cli-service build",
